# OpenCV4AndroidSample

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/wrongwrong/opencv4androidsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/wrongwrong/opencv4androidsample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wrongwrong/opencv4androidsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
